--- a/public/css/observer.css
+++ b/public/css/observer.css
@@ -32,11 +32,11 @@
 }
 
 .materialize-red.lighten-2 {
-  background-color: #ee6e73 !important;
+  background-color: #5c6bc0 !important;
 }
 
 .materialize-red-text.text-lighten-2 {
-  color: #ee6e73 !important;
+  color: #5c6bc0 !important;
 }
 
 .materialize-red.lighten-1 {
@@ -2657,7 +2657,7 @@ a {
 blockquote {
   margin: 20px 0;
   padding-left: 1.5rem;
-  border-left: 5px solid #ee6e73;
+  border-left: 5px solid #5c6bc0;
 }
 
 i {
@@ -2708,7 +2708,7 @@ video.responsive-video {
   color: #fff;
 }
 .pagination li.active {
-  background-color: #ee6e73;
+  background-color: #5c6bc0;
 }
 .pagination li.disabled a {
   cursor: default;
@@ -2894,7 +2894,7 @@ ul.staggered-list li {
 .page-footer {
   padding-top: 20px;
   color: #fff;
-  background-color: #ee6e73;
+  background-color: #5c6bc0;
 }
 .page-footer .footer-copyright {
   overflow: hidden;
@@ -3059,7 +3059,7 @@ table.responsive-table td {
   border-bottom: none;
 }
 .collection .collection-item.active {
-  background-color: #ee6e73;
+  background-color: #5c6bc0;
   color: white;
 }
 .collection .collection-item.active .secondary-content {
@@ -3068,7 +3068,7 @@ table.responsive-table td {
 .collection a.collection-item {
   display: block;
   transition: 0.25s;
-  color: #ee6e73;
+  color: #5c6bc0;
 }
 .collection a.collection-item:not(.active):hover {
   background-color: #ddd;
@@ -3087,7 +3087,7 @@ table.responsive-table td {
 
 .secondary-content {
   float: right;
-  color: #ee6e73;
+  color: #5c6bc0;
 }
 
 .collapsible .collection {
@@ -3124,11 +3124,11 @@ table.responsive-table td {
   top: 0;
   left: 0;
   bottom: 0;
-  background-color: #ee6e73;
+  background-color: #5c6bc0;
   transition: width 0.3s linear;
 }
 .progress .indeterminate {
-  background-color: #ee6e73;
+  background-color: #5c6bc0;
 }
 .progress .indeterminate:before {
   content: "";
@@ -3249,7 +3249,7 @@ span.badge.new {
   font-weight: 300;
   font-size: 0.8rem;
   color: #fff;
-  background-color: #ee6e73;
+  background-color: #5c6bc0;
   border-radius: 2px;
 }
 span.badge.new:after {
@@ -4075,7 +4075,7 @@ table span.badge {
 
 nav {
   color: #fff;
-  background-color: #ee6e73;
+  background-color: #5c6bc0;
   width: 100%;
   height: 56px;
   line-height: 56px;
@@ -4740,7 +4740,7 @@ small {
 }
 .tabs .tab a:hover, .tabs .tab a.active {
   background-color: transparent;
-  color: #ee6e73;
+  color: #5c6bc0;
 }
 .tabs .tab.disabled a, .tabs .tab.disabled a:hover {
   color: rgba(238, 110, 115, 0.4);
@@ -4876,7 +4876,7 @@ small {
 .btn, .btn-small, .btn-large {
   text-decoration: none;
   color: #fff;
-  background-color: #ee6e73;
+  background-color: #5c6bc0;
   text-align: center;
   letter-spacing: 0.5px;
   transition: background-color 0.2s ease-out;
@@ -4896,14 +4896,14 @@ small {
   height: 40px;
   line-height: 40px;
   padding: 0;
-  background-color: #ee6e73;
+  background-color: #5c6bc0;
   border-radius: 50%;
   transition: background-color 0.3s;
   cursor: pointer;
   vertical-align: middle;
 }
 .btn-floating:hover {
-  background-color: #ee6e73;
+  background-color: #5c6bc0;
 }
 .btn-floating:before {
   border-radius: 0;
@@ -5060,7 +5060,7 @@ button.btn-floating {
   z-index: -1;
   width: 40px;
   height: 40px;
-  background-color: #ee6e73;
+  background-color: #5c6bc0;
   border-radius: 50%;
   transform: scale(0);
 }
@@ -5144,7 +5144,7 @@ button.btn-floating {
 }
 .dropdown-content li > a, .dropdown-content li > span {
   font-size: 16px;
-  color: #ee6e73;
+  color: #5c6bc0;
   display: block;
   line-height: 22px;
   padding: 14px 16px;
@@ -5691,8 +5691,8 @@ input[type=tel]:not(.browser-default):focus:not([readonly]),
 input[type=number]:not(.browser-default):focus:not([readonly]),
 input[type=search]:not(.browser-default):focus:not([readonly]),
 textarea.materialize-textarea:focus:not([readonly]) {
-  border-bottom: 1px solid #ee6e73;
-  box-shadow: 0 1px 0 0 #ee6e73;
+  border-bottom: 1px solid #5c6bc0;
+  box-shadow: 0 1px 0 0 #5c6bc0;
 }
 input:not([type]):focus:not([readonly]) + label,
 input[type=text]:not(.browser-default):focus:not([readonly]) + label,
@@ -5707,7 +5707,7 @@ input[type=tel]:not(.browser-default):focus:not([readonly]) + label,
 input[type=number]:not(.browser-default):focus:not([readonly]) + label,
 input[type=search]:not(.browser-default):focus:not([readonly]) + label,
 textarea.materialize-textarea:focus:not([readonly]) + label {
-  color: #ee6e73;
+  color: #5c6bc0;
 }
 input:not([type]):focus.valid ~ label,
 input[type=text]:not(.browser-default):focus.valid ~ label,
@@ -5987,7 +5987,7 @@ textarea.materialize-textarea + label:after {
   top: 0.5rem;
 }
 .input-field .prefix.active {
-  color: #ee6e73;
+  color: #5c6bc0;
 }
 .input-field .prefix ~ input,
 .input-field .prefix ~ textarea,
@@ -6158,12 +6158,12 @@ textarea.materialize-textarea {
 [type=radio]:checked + span:after,
 [type=radio].with-gap:checked + span:before,
 [type=radio].with-gap:checked + span:after {
-  border: 2px solid #ee6e73;
+  border: 2px solid #5c6bc0;
 }
 
 [type=radio]:checked + span:after,
 [type=radio].with-gap:checked + span:after {
-  background-color: #ee6e73;
+  background-color: #5c6bc0;
 }
 
 [type=radio]:checked + span:after {
@@ -6269,8 +6269,8 @@ textarea.materialize-textarea {
   height: 22px;
   border-top: 2px solid transparent;
   border-left: 2px solid transparent;
-  border-right: 2px solid #ee6e73;
-  border-bottom: 2px solid #ee6e73;
+  border-right: 2px solid #5c6bc0;
+  border-bottom: 2px solid #5c6bc0;
   transform: rotate(40deg);
   backface-visibility: hidden;
   transform-origin: 100% 100%;
@@ -6288,7 +6288,7 @@ textarea.materialize-textarea {
   height: 22px;
   border-top: none;
   border-left: none;
-  border-right: 2px solid #ee6e73;
+  border-right: 2px solid #5c6bc0;
   border-bottom: none;
   transform: rotate(90deg);
   backface-visibility: hidden;
@@ -6344,8 +6344,8 @@ textarea.materialize-textarea {
   top: 0;
   width: 20px;
   height: 20px;
-  border: 2px solid #ee6e73;
-  background-color: #ee6e73;
+  border: 2px solid #5c6bc0;
+  background-color: #5c6bc0;
   z-index: 0;
 }
 [type=checkbox].filled-in.tabbed:focus + span:not(.lever):after {
@@ -6355,8 +6355,8 @@ textarea.materialize-textarea {
 }
 [type=checkbox].filled-in.tabbed:checked:focus + span:not(.lever):after {
   border-radius: 2px;
-  background-color: #ee6e73;
-  border-color: #ee6e73;
+  background-color: #5c6bc0;
+  border-color: #5c6bc0;
 }
 [type=checkbox].filled-in:disabled:not(:checked) + span:not(.lever):before {
   background-color: transparent;
@@ -6398,7 +6398,7 @@ textarea.materialize-textarea {
   left: 18px;
 }
 .switch label input[type=checkbox]:checked + .lever:after {
-  background-color: #ee6e73;
+  background-color: #5c6bc0;
 }
 
 .switch label .lever {
@@ -6503,7 +6503,7 @@ select {
   z-index: 1;
 }
 .select-wrapper input.select-dropdown:focus {
-  border-bottom: 1px solid #ee6e73;
+  border-bottom: 1px solid #5c6bc0;
 }
 .select-wrapper .caret {
   position: absolute;
@@ -6659,7 +6659,7 @@ input[type=range] + .thumb {
   height: 0;
   width: 0;
   border-radius: 50%;
-  background-color: #ee6e73;
+  background-color: #5c6bc0;
   margin-left: 7px;
   transform-origin: 50% 50%;
   transform: rotate(-45deg);
@@ -6668,7 +6668,7 @@ input[type=range] + .thumb .value {
   display: block;
   width: 30px;
   text-align: center;
-  color: #ee6e73;
+  color: #5c6bc0;
   font-size: 0;
   transform: rotate(45deg);
 }
@@ -6697,10 +6697,10 @@ input[type=range]::-webkit-slider-thumb {
   height: 14px;
   width: 14px;
   border-radius: 50%;
-  background: #ee6e73;
+  background: #5c6bc0;
   transition: box-shadow 0.3s;
   -webkit-appearance: none;
-  background-color: #ee6e73;
+  background-color: #5c6bc0;
   transform-origin: 50% 50%;
   margin: -5px 0 0 0;
 }
@@ -6730,7 +6730,7 @@ input[type=range]::-moz-range-thumb {
   height: 14px;
   width: 14px;
   border-radius: 50%;
-  background: #ee6e73;
+  background: #5c6bc0;
   transition: box-shadow 0.3s;
   margin-top: -5px;
 }
@@ -6766,7 +6766,7 @@ input[type=range]::-ms-thumb {
   height: 14px;
   width: 14px;
   border-radius: 50%;
-  background: #ee6e73;
+  background: #5c6bc0;
   transition: box-shadow 0.3s;
 }
 
@@ -6796,12 +6796,12 @@ input[type=range]::-ms-thumb {
 .table-of-contents a:hover {
   color: #a8a8a8;
   padding-left: 15px;
-  border-left: 1px solid #ee6e73;
+  border-left: 1px solid #5c6bc0;
 }
 .table-of-contents a.active {
   font-weight: 500;
   padding-left: 14px;
-  border-left: 2px solid #ee6e73;
+  border-left: 2px solid #5c6bc0;
 }
 
 .sidenav {
@@ -6863,7 +6863,7 @@ input[type=range]::-ms-thumb {
   background-color: #f18589;
 }
 .sidenav li > a.btn-floating:hover {
-  background-color: #ee6e73;
+  background-color: #5c6bc0;
 }
 .sidenav li > a > i, .sidenav li > a > [class^=mdi-], .sidenav li > a li > a > [class*=mdi-], .sidenav li > a > i.material-icons {
   float: left;
@@ -6966,7 +6966,7 @@ input[type=range]::-ms-thumb {
 }
 .sidenav .collapsible-body > ul:not(.collapsible) > li.active,
 .sidenav.sidenav-fixed .collapsible-body > ul:not(.collapsible) > li.active {
-  background-color: #ee6e73;
+  background-color: #5c6bc0;
 }
 .sidenav .collapsible-body > ul:not(.collapsible) > li.active a,
 .sidenav.sidenav-fixed .collapsible-body > ul:not(.collapsible) > li.active a {
@@ -7049,7 +7049,7 @@ input[type=range]::-ms-thumb {
   width: 100%;
   height: 100%;
   opacity: 0;
-  border-color: #ee6e73;
+  border-color: #5c6bc0;
 }
 
 .spinner-blue,
@@ -7651,7 +7651,7 @@ input[type=range]::-ms-thumb {
   position: absolute;
   font-size: 1rem;
   border-radius: 50%;
-  background-color: #ee6e73;
+  background-color: #5c6bc0;
   box-shadow: 0 20px 20px 0 rgba(0, 0, 0, 0.14), 0 10px 50px 0 rgba(0, 0, 0, 0.12), 0 30px 10px -20px rgba(0, 0, 0, 0.2);
   width: 100%;
   height: 100%;
@@ -7789,7 +7789,7 @@ input[type=range]::-ms-thumb {
 /* Date Display */
 .datepicker-date-display {
   flex: 1 auto;
-  background-color: #ee6e73;
+  background-color: #5c6bc0;
   color: #fff;
   padding: 20px 22px;
   font-weight: 500;
@@ -7836,10 +7836,10 @@ input[type=range]::-ms-thumb {
   padding: 0;
 }
 .datepicker-table td.is-today {
-  color: #ee6e73;
+  color: #5c6bc0;
 }
 .datepicker-table td.is-selected {
-  background-color: #ee6e73;
+  background-color: #5c6bc0;
   color: #fff;
 }
 .datepicker-table td.is-outside-current-month, .datepicker-table td.is-disabled {
@@ -7875,7 +7875,7 @@ input[type=range]::-ms-thumb {
 .datepicker-clear,
 .datepicker-today,
 .datepicker-done {
-  color: #ee6e73;
+  color: #5c6bc0;
   padding: 0 1rem;
 }
 
@@ -7926,7 +7926,7 @@ input[type=range]::-ms-thumb {
 /* Clock Digital Display */
 .timepicker-digital-display {
   flex: 1 auto;
-  background-color: #ee6e73;
+  background-color: #5c6bc0;
   padding: 10px;
   font-weight: 300;
 }
@@ -8029,7 +8029,7 @@ input[type=range]::-ms-thumb {
   transition: opacity 175ms;
 }
 .timepicker-canvas line {
-  stroke: #ee6e73;
+  stroke: #5c6bc0;
   stroke-width: 4;
   stroke-linecap: round;
 }
@@ -8040,12 +8040,12 @@ input[type=range]::-ms-thumb {
 
 .timepicker-canvas-bearing {
   stroke: none;
-  fill: #ee6e73;
+  fill: #5c6bc0;
 }
 
 .timepicker-canvas-bg {
   stroke: none;
-  fill: #ee6e73;
+  fill: #5c6bc0;
 }
 
 /* Footer */
@@ -8061,7 +8061,7 @@ input[type=range]::-ms-thumb {
 }
 
 .timepicker-close {
-  color: #ee6e73;
+  color: #5c6bc0;
 }
 
 .timepicker-clear,
